# boltzgen_examples

./: README.md  boltzgen.nix  ldc_2d.py  shell.nix  simulation.py
ldc_2d/cpp/: CMakeLists.txt  generate.py  ldc_2d.cc  shell.nix
ldc_2d/opencl/: shell.nix
lid_driven_cavity/cpp/: CMakeLists.txt  README.md  config.py  generate.py  ldc.cpp.AA.mako  ldc.cpp.AB.mako  ldc.cpp.SSS.mako  ldc.cpp.mako  shell.nix
lid_driven_cavity/cuda/: CMakeLists.txt  config.py  generate.py  ldc.cuda.AA.mako  ldc.cuda.SSS.mako  shell.nix
lid_driven_cavity/opencl/: AA.py  AB.py  SSS.py  common.py  ldc_2d.py  shell.nix  simulation.py
lid_driven_cavity/opencl_gl_interop/: AA.py  AB.py  SSS.py  common.py  ldc_2d.py  shell.nix
lid_driven_cavity/opencl_gl_interop/lattice/: AA.py  AB.py  SSS.py
